--- a/docroot/themes/iucn_who/less/theme/blocks.less
+++ b/docroot/themes/iucn_who/less/theme/blocks.less
@@ -154,9 +154,9 @@
         background-size: 95%;
         content: '';
         display: inline-block;
-        height: 1.3 * @font-size-base--mobile;
+        height: 13px;
         margin-right: .5 * @font-size-base--mobile;
-        width: 1.3 * @font-size-base--mobile;
+        width: 13px;
       }
     }
     [aria-expanded="true"] > .icon-collapse:before,
